# clisnap

./: .gitignore  README.md  pyproject.toml
cmds/: linux_cmd.json  rails.json  rene.json
src/clisnap/: main.py
src/clisnap/cls/: clisnap.py  logger.py
src/clisnap/utils/: __init__.py  utils.py
