[project]
name = "clisnap"
dependencies = [
    "coloredlogs>=15.0.1",
    "pyyaml>=6.0.2",
    "humanfriendly>=10.0",
    "maginner>=0.1",
    "importlib_resources>=6.5.2",
    "pathlib>=1.0.1"
]
version="0.1.0"
requires-python = ">=3.13.5"
authors = [
  { name = "germfreekai", email = "renega1238@gmail.com" }
]

[project.scripts]
clisnap = "clisnap.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clisnap = ["cmds/*"]

# Linters
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
(?x)(
    \.git
  | \.venv
  | env
  | __pycache__
  | pyproject.toml
)
'''

[tool.pylint."MAIN"]
ignore = ["env", ".venv", "__pycache__", "pyproject.toml"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-few-public-methods",
    "too-many-instance-attributes"
]

[tool.pylint."FORMAT"]
max-line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip = ["env", ".venv", "__pycache__"]

